--- a/css/main.css
+++ b/css/main.css
@@ -781,7 +781,11 @@ section .img2 {
   font-size: 12pt;
   margin: 20px 10px;
 }
-
+.certificate .des p {
+  font-size: 12pt;
+  margin: 20px 10px;
+  margin-left: 30px;
+}
 @media screen and (min-width: 480px) and (max-width: 768px) {
   #Home {
     -ms-grid-columns: 100%;
